--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-transformers==4.28.1
-datasets==2.12.0
 pandas==1.5.3
 numpy==1.24.3
-scikit-learn==1.2.2
-tqdm==4.65.0
 matplotlib==3.7.1
 seaborn==0.12.2
+scipy==1.10.1
+scikit-learn==1.2.2
+xgboost==2.0.3
+shap==0.45.1
+sdv==0.18.0
+transformers==4.28.1
+datasets==2.12.0
+tqdm==4.65.0
